Camlp4 Version 3.04+1
---------------------

- [28 Jan 02] Fixed bug in pa_o when parsing class_types. A horrible hack
  had to be programmed to be able to treat them correctly.
- [28 Jan 02] Fixed bug in OCaml toplevel when loading camlp4: the directives
  were not applied in the good order.
- [26 Jan 02] The printer pr_extend.cmo try now also to rebuild GEXTEND
  statements (before it tried only the EXTEND).
- [23 Jan 02] The empty functional stream "fstream [: :]" is now of type
  'a Fstream.t thanks to the new implementation of lazies allowing to
  create polymorphic lazy values.
- [11 Jan 02] Added a test in grammars using Plexer that a keyword is not
  used also as parameter of a LIDENT or a UIDENT.
- [04 Jan 02] Fixed bug in pa_sml (SML syntax): the function definitions
  with several currified parameters did not work. It works now, but the
  previous code was supposed to treat let ("fun" in SML syntax) definitions
  of infix operators, what does not work any more now.
- [04 Jan 02] Alain Frisch's contribution:
  Added pa_ocamllex.cma, syntax for ocamllex files. The command:
      camlp4 pa_ocamllex.cmo pr_o.cmo -ocamllex -impl foo.mll > foo.ml
  does the same thing as:
      ocamllex foo.mll
  Allow to compile directly mll files. Without option -ocamllex, allow
  to insert lex rules in a ml file.
- [29 Dec 01] Added variable "inter_phrases" in Pcaml, of type ref (option
  string) to specify the string to print between phrases in pretty printers.
  The default is None, meaning to copy the inter phrases from the source
  file.

Camlp4 Version 3.04
-------------------

- [07 Dec 01] Added Pcaml.parse_interf and Pcaml.parse_implem, hooks to
  specify the parsers tof use, i.e. now can use other parsing technics
  than the Camlp4 grammar system.
- [27 Nov 01] Fixed functions Token.eval_char and Token.eval_string which
  returned bad values, resulting lexing of backslash sequences incompatible